--- a/Templates/Per Tenant Extension/.github/workflows/CICD.yaml
+++ b/Templates/Per Tenant Extension/.github/workflows/CICD.yaml
@@ -252,11 +252,8 @@ jobs:
         uses: microsoft/AL-Go-Actions/Sign@main
         with:
           shell: ${{ needs.Initialization.outputs.githubRunnerShell }}
-          azureKeyVaultName: ${{ fromJSON(secrets.AZURE_CREDENTIALS).keyVaultName }}
-          azureKeyVaultClientID: ${{ fromJSON(secrets.AZURE_CREDENTIALS).clientId }}
-          azureKeyVaultClientSecret: ${{ fromJSON(secrets.AZURE_CREDENTIALS).clientSecret }}
-          azureKeyVaultTenantID: ${{ fromJSON(secrets.AZURE_CREDENTIALS).tenantId }}
-          azureKeyVaultCertificateName: ${{ env.keyVaultCodesignCertificateName }}
+          azureCredentialsJson: ${{ secrets.AZURE_CREDENTIALS }}
+          settingsJson: ${{ env.Settings }}
           pathToFiles: '${{ matrix.project }}/.buildartifacts/Apps/*.app'
           parentTelemetryScopeJson: ${{ needs.Initialization.outputs.telemetryScopeJson }}
 
