--- a/Actions/DetermineProjectsToBuild/action.yaml
+++ b/Actions/DetermineProjectsToBuild/action.yaml
@@ -23,6 +23,9 @@ outputs:
   BuildOrderJson: 
     description: An array of objects that determine that build order, including build dimensions
     value: ${{ steps.determineProjectsToBuild.outputs.BuildOrderJson }}
+  ProjectsBuildTimeoutJson:
+    description: An object that holds the projects build timeout in compressed JSON format
+    value: ${{ steps.determineProjectsToBuild.outputs.ProjectsBuildTimeoutJson }}
 runs:
   using: composite
   steps:
