--- a/Actions/FetchProjectDependencies/action.yaml
+++ b/Actions/FetchProjectDependencies/action.yaml
@@ -13,7 +13,7 @@ inputs:
     description: Build mode used when building the artifacts
     required: true
   projectsDependenciesJson:
-    description: An object that matches eash project with its dependency projects
+    description: A JSON object that matches eash project with its dependency projects
     required: true
   destinationPath:
     default: ${{ github.workspace }}/.dependencies
@@ -39,7 +39,7 @@ runs:
       env:
         gitHubToken: ${{ github.token }}
       run:
-        ${{ github.action_path }}/FetchProjectDependencies.ps1 -project ${{ inputs.project }} -buildMode ${{ inputs.buildMode }} -projectsDependenciesJson ${{ inputs.projectsDependenciesJson }} -baseBranch '${{ github.base_ref }}' -baseFolder ${{ github.workspace }} -destinationPath ${{ inputs.destinationPath }} -token ${{ github.token }}
+        ${{ github.action_path }}/FetchProjectDependencies.ps1 -project ${{ inputs.project }} -buildMode ${{ inputs.buildMode }} -projectsDependenciesJson '${{ inputs.projectsDependenciesJson }}' -baseBranch '${{ github.base_ref }}' -baseFolder ${{ github.workspace }} -destinationPath ${{ inputs.destinationPath }} -token ${{ github.token }}
 branding:
   icon: terminal
   color: blue
