Add build mode to FetchProjectDependencies reference

--- a/Templates/Per Tenant Extension/.github/workflows/_BuildALGoProject.yaml
+++ b/Templates/Per Tenant Extension/.github/workflows/_BuildALGoProject.yaml
@@ -117,6 +117,7 @@ jobs:
           with:
             shell: ${{ inputs.shell }}
             project: ${{ inputs.project }}
+            buildMode: ${{ inputs.buildMode }}
             projectsDependenciesJson: ${{ inputs.projectDependenciesJson }}
 
         - name: Run pipeline
