better temp branch names

--- a/.github/workflows/Collect.yaml
+++ b/.github/workflows/Collect.yaml
@@ -1,5 +1,7 @@
 name: Collect
 
+run-name: "Collect from [${{ inputs.branch }}] to [${{ github.ref_name }}]"
+
 on:
   workflow_dispatch:
     inputs:
