--- a/Actions/DownloadProjectDependencies/action.yaml
+++ b/Actions/DownloadProjectDependencies/action.yaml
@@ -1,13 +1,13 @@
-name: Fetch Project dependencies
+name: Download Project Dependencies
 author: Microsoft Corporation
-description: Fetches the dependencies of a project
+description: Downloads the dependencies of an AL-Go project
 inputs:
   shell:
     description: Shell in which you want to run the action (powershell or pwsh)
     required: false
     default: powershell
   project:
-    description: Project for which to fetch dependencies
+    description: Project for which to download dependencies
     required: true
   buildMode:
     description: Build mode used when building the artifacts
@@ -19,12 +19,12 @@ inputs:
     default: ${{ github.workspace }}/.dependencies
     description: The destination path where the dependencies will be stored
 outputs:
-  FetchedApps: 
-    description: A JSON-formatted array of paths to .app files of the apps that were fetched
-    value: ${{ steps.FetchDependencies.outputs.FetchedApps }}
-  FetchedTestApps: 
-    description: A JSON-formatted array of paths to .app files of the test apps that were fetched
-    value: ${{ steps.FetchDependencies.outputs.FetchedTestApps }}
+  DownloadedApps: 
+    description: A JSON-formatted array of paths to .app files of the apps that were downloaded
+    value: ${{ steps.DownloadDependencies.outputs.DownloadedApps }}
+  DownloadedTestApps: 
+    description: A JSON-formatted array of paths to .app files of the test apps that were downloaded
+    value: ${{ steps.DownloadDependencies.outputs.DownloadedTestApps }}
 runs:
   using: composite
   steps:
@@ -33,19 +33,18 @@ runs:
       with:
         path: ${{ inputs.destinationPath}}
 
-    - name: Fetch project dependencies
+    - name: Download project dependencies
       shell: ${{ inputs.shell }}
-      id: FetchDependencies
+      id: DownloadDependencies
       env:
         _project: ${{ inputs.project }}
         _buildMode: ${{ inputs.buildMode }}
         _projectsDependenciesJson: ${{ inputs.projectsDependenciesJson }}
-        _baseBranch: ${{ github.base_ref }}
         _baseFolder: ${{ github.workspace }}
         _destinationPath: ${{ inputs.destinationPath }}
         _gitHubToken: ${{ github.token }}
       run:
-        ${{ github.action_path }}/FetchProjectDependencies.ps1 -project $ENV:_project -buildMode $ENV:_buildMode -projectsDependenciesJson $ENV:_projectsDependenciesJson -baseBranch $ENV:_baseBranch -baseFolder $ENV:_baseFolder -destinationPath $ENV:_destinationFolder -token $ENV:_gitHubToken
+        ${{ github.action_path }}/DownloadProjectDependencies.Action.ps1 -project $ENV:_project -buildMode $ENV:_buildMode -projectsDependenciesJson $ENV:_projectsDependenciesJson -baseFolder $ENV:_baseFolder -destinationPath $ENV:_destinationFolder -token $ENV:_gitHubToken
 branding:
   icon: terminal
   color: blue
