--- a/Templates/AppSource App/.github/workflows/PullRequestHandler.yaml
+++ b/Templates/AppSource App/.github/workflows/PullRequestHandler.yaml
@@ -36,7 +36,8 @@ jobs:
 
       - uses: microsoft/AL-Go-Actions/VerifyPRChanges@main
         with:
-          pullRequestId: ${{ github.event.pull_request.number }}
+          baseSHA: ${{ github.event.pull_request.base.sha }}
+          headSHA: ${{ github.event.pull_request.head.sha }}
           prbaseRepository: ${{ github.event.pull_request.base.repo.full_name }}
 
   Initialization:
