--- a/Actions/VerifyPRChanges/action.yaml
+++ b/Actions/VerifyPRChanges/action.yaml
@@ -9,14 +9,22 @@ inputs:
     description: The token to use for the GitHub API
     required: false
     default: ${{ github.token }}
-  pullRequestId:
+  baseSHA:
     description: Base commit of the PR
     required: false
-    default: ${{ github.event.pull_request.number }}
+    default: ${{ github.event.pull_request.base.sha }}
+  headSHA:
+    description: Head commit of the PR
+    required: false
+    default: ${{ github.event.pull_request.head.sha }}
   prBaseRepository:
     description: The name of the repository the PR is going to
     required: false
     default: ${{ github.event.pull_request.base.repo.full_name }}
+  pullRequestId:
+    description: Base commit of the PR
+    required: false
+    default: ${{ github.event.pull_request.number }}
 runs:
   using: composite
   steps:
@@ -24,9 +32,11 @@ runs:
       shell: ${{ inputs.shell }}
       env:
         _token: ${{ inputs.token }}
-        _pullRequestId: ${{ inputs.pullRequestId }}
+        _baseSHA: ${{ inputs.baseSHA }}
+        _headSHA: ${{ inputs.headSHA }}
         _prBaseRepository: ${{ inputs.prBaseRepository }}
-      run: try { ${{ github.action_path }}/VerifyPRChanges.ps1 -token $ENV:_token -pullRequestId $ENV:_pullRequestId -prBaseRepository $ENV:_prBaseRepository } catch { Write-Host "::Error::Unexpected error when running action ($($_.Exception.Message.Replace("*",'').Replace("*",' ')))"; exit 1 }
+        _pullRequestId: ${{ inputs.pullRequestId }}
+      run: try { ${{ github.action_path }}/VerifyPRChanges.ps1 -token $ENV:_token -baseSHA $ENV:_baseSHA -headSHA $ENV:_headSHA -prBaseRepository $ENV:_prBaseRepository -pullRequestId $ENV:_pullRequestId } catch { Write-Host "::Error::Unexpected error when running action ($($_.Exception.Message.Replace("*",'').Replace("*",' ')))"; exit 1 }
 branding:
   icon: terminal
   color: blue
