--- a/Actions/VerifyPRChanges/action.yaml
+++ b/Actions/VerifyPRChanges/action.yaml
@@ -22,7 +22,7 @@ inputs:
     required: false
     default: ${{ github.event.pull_request.base.repo.full_name }}
   pullRequestId:
-    description: Base commit of the PR
+    description: The id of the pull request
     required: false
     default: ${{ github.event.pull_request.number }}
 runs:
